--- a/branches/plugins/restart_enigma/Makefile.am
+++ b/branches/plugins/restart_enigma/Makefile.am
@@ -21,13 +21,14 @@ restart_enigma_la_LDFLAGS = -rpath $(PLUGINDIR) -module
 restart_enigma_la_CXXFLAGS = -fno-rtti -fno-exceptions
 
 install-exec-local:
-	install -d $(DESTDIR)$(PLUGINDIR)
-	install .libs/restart_enigma.so $(DESTDIR)$(PLUGINDIR)
-	install -m 0644 restart_enigma.cfg $(DESTDIR)$(PLUGINDIR)
+	install -d $(DESTDIR)$(PLUGINDIR)/restart_enigma
+	install .libs/restart_enigma.so $(DESTDIR)$(PLUGINDIR)/restart_enigma
+	install -m 0644 restart_enigma.cfg $(DESTDIR)$(PLUGINDIR)/restart_enigma
 
 uninstall-local:
-	-rm $(DESTDIR)$(PLUGINDIR)/restart_enigma.so
-	-rm $(DESTDIR)$(PLUGINDIR)/restart_enigma.cfg
+	-rm $(DESTDIR)$(PLUGINDIR)/restart_enigma/restart_enigma.so
+	-rm $(DESTDIR)$(PLUGINDIR)/restart_enigma/restart_enigma.cfg
+	-rmdir $(DESTDIR)$(PLUGINDIR)/restart_enigma
 	
 
 
