--- a/vlcplayer/Makefile.am
+++ b/vlcplayer/Makefile.am
@@ -21,13 +21,14 @@ vlcplayer_la_LDFLAGS = -rpath $(PLUGINDIR) -module
 vlcplayer_la_CXXFLAGS = -fno-rtti -fno-exceptions
 
 install-exec-local:
-	install -d $(DESTDIR)$(PLUGINDIR)
-	install .libs/vlcplayer.so $(DESTDIR)$(PLUGINDIR)
-	install -m 0644 vlcplayer.cfg $(DESTDIR)$(PLUGINDIR)
+	install -d $(DESTDIR)$(PLUGINDIR)/vlcplayer
+	install .libs/vlcplayer.so $(DESTDIR)$(PLUGINDIR)/vlcplayer
+	install -m 0644 vlcplayer.cfg $(DESTDIR)$(PLUGINDIR)/vlcplayer
 
 uninstall-local:
-	-rm $(DESTDIR)$(PLUGINDIR)/vlcplayer.so
-	-rm $(DESTDIR)$(PLUGINDIR)/vlcplayer.cfg
+	-rm $(DESTDIR)$(PLUGINDIR)/vlcplayer/vlcplayer.so
+	-rm $(DESTDIR)$(PLUGINDIR)/vlcplayer/vlcplayer.cfg
+	-rmdir $(DESTDIR)$(PLUGINDIR)/vlcplayer
 
 
 
