--- a/branches/plugins/mediaportal/Makefile.am
+++ b/branches/plugins/mediaportal/Makefile.am
@@ -24,6 +24,7 @@ install-exec-local:
 	install -d $(DESTDIR)$(PLUGINDIR)/mediaportal
 	install .libs/mediaportal.so $(DESTDIR)$(PLUGINDIR)/mediaportal
 	install -m 0644 mediaportal.cfg $(DESTDIR)$(PLUGINDIR)/mediaportal
+	install -m 0644 mp.png $(DESTDIR)$(PLUGINDIR)/mediaportal
 	install -m 0644 deluxemusic.png $(DESTDIR)$(PLUGINDIR)/mediaportal
 	install -m 0644 filmon.png $(DESTDIR)$(PLUGINDIR)/mediaportal
 	install -m 0644 orf.png $(DESTDIR)$(PLUGINDIR)/mediaportal
@@ -31,6 +32,7 @@ install-exec-local:
 uninstall-local:
 	-rm $(DESTDIR)$(PLUGINDIR)/mediaportal/mediaportal.so
 	-rm $(DESTDIR)$(PLUGINDIR)/mediaportal/mediaportal.cfg
+	-rm $(DESTDIR)$(PLUGINDIR)/mediaportal/mp.png
 	-rm $(DESTDIR)$(PLUGINDIR)/mediaportal/deluxemusic.png
 	-rm $(DESTDIR)$(PLUGINDIR)/mediaportal/filmon.png
 	-rm $(DESTDIR)$(PLUGINDIR)/mediaportal/orf.png
