--- a/nglcd/Makefile.am
+++ b/nglcd/Makefile.am
@@ -14,7 +14,7 @@ AM_CPPFLAGS =  \
 
 noinst_LTLIBRARIES = nglcd.la
 
-nglcd_la_SOURCES = glcdsetup.cpp
+nglcd_la_SOURCES = nglcd.cpp glcdsetup.cpp
 	 
 nglcd_la_LDFLAGS = -rpath $(PLUGINDIR) -module
 
