--- a/mediaportal/Makefile.am
+++ b/mediaportal/Makefile.am
@@ -9,13 +9,12 @@ AM_CPPFLAGS =  \
 	-I$(top_srcdir)/../nhd2-exp/lib/libxmltree \
 	-I$(top_srcdir)/../nhd2-exp/lib/libmd5sum \
 	-I$(top_srcdir)/../nhd2-exp/lib/libdvbapi \
-	-I$(top_srcdir)/../nhd2-exp/lib/libupnpclient \
 	-I$(top_srcdir)/../nhd2-exp/lib/jsoncpp/include \
 	@FREETYPE_CFLAGS@ 
 
 noinst_LTLIBRARIES = mediaportal.la
 
-mediaportal_la_SOURCES = mediaportal.cpp nkparser.cpp netzkino.cpp ytparser.cpp youtube.cpp
+mediaportal_la_SOURCES = mediaportal.cpp
 	 
 mediaportal_la_LDFLAGS = -rpath $(PLUGINDIR) -module
 
@@ -28,9 +27,6 @@ install-exec-local:
 	install -m 0644 mp.png $(DESTDIR)$(PLUGINDIR)/mediaportal
 	install -m 0644 deluxemusic.png $(DESTDIR)$(PLUGINDIR)/mediaportal
 	install -m 0644 filmon.png $(DESTDIR)$(PLUGINDIR)/mediaportal
-	install -m 0644 orf.png $(DESTDIR)$(PLUGINDIR)/mediaportal
-	install -m 0644  netzkino.png $(DESTDIR)$(PLUGINDIR)/mediaportal
-	install -m 0644  youtube.png $(DESTDIR)$(PLUGINDIR)/mediaportal
 
 uninstall-local:
 	-rm $(DESTDIR)$(PLUGINDIR)/mediaportal/mediaportal.so
@@ -38,9 +34,6 @@ uninstall-local:
 	-rm $(DESTDIR)$(PLUGINDIR)/mediaportal/mp.png
 	-rm $(DESTDIR)$(PLUGINDIR)/mediaportal/deluxemusic.png
 	-rm $(DESTDIR)$(PLUGINDIR)/mediaportal/filmon.png
-	-rm $(DESTDIR)$(PLUGINDIR)/mediaportal/orf.png
-	-rm $(DESTDIR)$(PLUGINDIR)/mediaportal/netzkino.png
-	-rm $(DESTDIR)$(PLUGINDIR)/mediaportal/youtube.png
 	-rmdir $(DESTDIR)$(PLUGINDIR)/mediaportal
 
 
