--- a/branches/plugins/netzkino/Makefile.am
+++ b/branches/plugins/netzkino/Makefile.am
@@ -11,6 +11,7 @@ AM_CPPFLAGS =  \
 	-I$(top_srcdir)/../nhd2-exp/lib/libxmltree \
 	-I$(top_srcdir)/../nhd2-exp/lib/libmd5sum \
 	-I$(top_srcdir)/../nhd2-exp/lib/libdvbapi \
+	-I$(top_srcdir)/netzkino/jsoncpp/include \
 	@FREETYPE_CFLAGS@ 
 
 noinst_LTLIBRARIES = netzkino.la
