--- a/branches/nhd2-exp/lib/Makefile.am
+++ b/branches/nhd2-exp/lib/Makefile.am
@@ -8,7 +8,8 @@ SUBDIRS = \
 	libnet \
 	libxmltree \
 	libtuxtxt \
-	libdvbsub
+	libdvbsub \
+	libupnpclient
 
 if !BOXTYPE_COOLSTREAM
 SUBDIRS += libdvbapi
