--- a/netzkino/jsoncpp/Makefile.am
+++ b/netzkino/jsoncpp/Makefile.am
@@ -3,7 +3,7 @@ AM_CPPFLAGS = \
 	-I$(top_srcdir) \
 	-I$(srcdir)/include
 
-AM_CXXFLAGS = -fno-rtti
+AM_CXXFLAGS = -fno-rtti -fPIC
 
 noinst_LIBRARIES = libjsoncpp.a
 
