--- a/data/webtv/Makefile.am
+++ b/data/webtv/Makefile.am
@@ -1,4 +1,7 @@
-installdir = $(CONFIGDIR)
+install-exec-local:
+	install -d $(DESTDIR)$(CONFIGDIR)/webtv
+
+installdir = $(CONFIGDIR)/webtv
 
 install_DATA = \
 	webtv.xml
