--- a/netzkino/Makefile.am
+++ b/netzkino/Makefile.am
@@ -1,5 +1,3 @@
-SUBDIRS = jsoncpp
-
 AM_CPPFLAGS =  \
 	-I$(top_srcdir)/../nhd2-exp/src \
 	-I$(top_srcdir)/../nhd2-exp/src/zapit/include/zapit \
@@ -11,7 +9,7 @@ AM_CPPFLAGS =  \
 	-I$(top_srcdir)/../nhd2-exp/lib/libxmltree \
 	-I$(top_srcdir)/../nhd2-exp/lib/libmd5sum \
 	-I$(top_srcdir)/../nhd2-exp/lib/libdvbapi \
-	-I$(top_srcdir)/netzkino/jsoncpp/include \
+	-I$(top_srcdir)/../nhd2-exp/lib/jsoncpp/include \
 	@FREETYPE_CFLAGS@ 
 
 noinst_LTLIBRARIES = netzkino.la
@@ -20,7 +18,7 @@ netzkino_la_SOURCES = nkparser.cpp netzkino.cpp
 	 
 netzkino_la_LDFLAGS = -rpath $(PLUGINDIR) -module
 
-netzkino_la_LIBADD = $(top_srcdir)/netzkino/jsoncpp/libjsoncpp.a
+netzkino_la_LIBADD = $(top_srcdir)/../nhd2-exp/lib/jsoncpp/libjsoncpp.a
 
 netzkino_la_CXXFLAGS = -fno-rtti -fno-exceptions
 
