--- a/branches/nhd2-exp/configure.ac
+++ b/branches/nhd2-exp/configure.ac
@@ -1,5 +1,5 @@
-AC_INIT(tuxbox-neutrino,1.0.1)
-AM_INIT_AUTOMAKE(tuxbox-neutrino,1.0.1) 
+AC_INIT(neutrinoHD2,1.0.1)
+AM_INIT_AUTOMAKE(neutrinoHD2,1.0.1) 
 
 TUXBOX_APPS
 TUXBOX_APPS_DIRECTORY
