--- a/branches/nhd2-exp/lib/libupnpclient/Makefile.am
+++ b/branches/nhd2-exp/lib/libupnpclient/Makefile.am
@@ -1,6 +1,7 @@
 noinst_LIBRARIES = libtuxbox-upnpclient.a
 
 INCLUDES = \
-	-I$(top_srcdir)/lib/libxmltree
+	-I$(top_srcdir)/lib/libxmltree \
+	-I$(top_srcdir)/src 
 
 libtuxbox_upnpclient_a_SOURCES = UPNPSocket.cpp UPNPDevice.cpp UPNPService.cpp
