--- a/lib/jsoncpp/Makefile.am
+++ b/lib/jsoncpp/Makefile.am
@@ -3,9 +3,9 @@ AM_CPPFLAGS = \
 	-I$(top_srcdir) \
 	-I$(srcdir)/include
 
-AM_CXXFLAGS = -fno-rtti -fPIC
+AM_CXXFLAGS = -fno-rtti
 
 noinst_LIBRARIES = libjsoncpp.a
 
-libjsoncpp_a_SOURCES = \
-	json_reader.cpp json_value.cpp json_writer.cpp
+libjsoncpp_a_SOURCES = jsoncpp.cpp
+ 
