--- a/fileexplorer/fileexplorer.cfg
+++ b/fileexplorer/fileexplorer.cfg
@@ -1,5 +1,6 @@
 name=File Explorer
-desc=Media File Explorer and Player (v0.0.1)
+desc=Media File Explorer and Player
+version=0.0.1
 type=4
 icon=test.png
 
