--- a/branches/plugins/tuxcal/Makefile.am
+++ b/branches/plugins/tuxcal/Makefile.am
@@ -11,6 +11,7 @@ AM_CPPFLAGS =  \
 	-I$(top_srcdir)/../nhd2-exp/lib/libxmltree \
 	-I$(top_srcdir)/../nhd2-exp/lib/libmd5sum \
 	-I$(top_srcdir)/../nhd2-exp/lib/libdvbapi \
+	-I$(top_srcdir)/../nhd2-exp/lib/libupnpclient \
 	@FREETYPE_CFLAGS@
 
 noinst_LTLIBRARIES = tuxcal.la
