--- a/branches/plugins/youtube/Makefile.am
+++ b/branches/plugins/youtube/Makefile.am
@@ -27,6 +27,8 @@ install-exec-local:
 	install .libs/youtube.so $(DESTDIR)$(PLUGINDIR)/youtube
 	install -m 0644 youtube.cfg $(DESTDIR)$(PLUGINDIR)/youtube
 	install -m 0644 youtube.png $(DESTDIR)$(PLUGINDIR)/youtube
+	install -m 0644 youtube_small.png $(DESTDIR)$(PLUGINDIR)/youtube
+	install -m 0644 yt.conf $(DESTDIR)$(PLUGINDIR)/youtube
 
 uninstall-local:
 	-rm $(DESTDIR)$(PLUGINDIR)/youtube/youtube.so
